# symbolic-regression

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  insights.md  multisets.md  sr-profile.ps  symbolic-regression.cabal
bench/: Bench.hs  BoostBench.hs  Feynman.hs  Profile.hs  ProfileLinear.hs  feynman_comparison.md  feynman_results.md
docs/: optimization-summary.md
scripts/: bench_comparison.sh  bench_pysr.py  lint.sh  profile_feynman.py  profile_feynman.sh  use_profile_env.sh
src/: Example.hs  SymbolicRegression.hs
src/Numeric/Optimization/NLOPT/: Bindings.hs
src/Symbolic/: Regression.hs
src/Symbolic/Regression/: Boosting.hs  EGraph.hs  Expr.hs  Fitness.hs  GP.hs  Language.hs  Poly.hs  Rewrites.hs
src/Symbolic/Regression/Expr/: Eval.hs  NLOPT.hs  Opt.hs  Print.hs  Utils.hs
test/: Main.hs
