cabal-version:      3.0
name:               symbolic-regression
version:            0.1.0.0
synopsis:           Symbolic Regression in Haskell
license:            MIT
license-file:       LICENSE
author:             Michael Chavinda
maintainer:         mschavinda@gmail.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Symbolic.Regression
    build-depends:    base >= 4 && <5
                    , dataframe ^>= 0.4
                    , attoparsec >=0.14.4 && <0.15
                    , attoparsec-expr >=0.1.1.2 && <0.2
                    , binary >=0.8.9.1 && <0.9
                    , bytestring >=0.11 && <0.13
                    , containers >=0.6.7 && <0.8
                    , dlist ==1.0.*
                    , exceptions >=0.10.7 && <0.11
                    , filepath >=1.4.0.0 && <1.6
                    , hashable >=1.4.4.0 && <1.6
                    , ieee754 >=0.8.0 && <0.9
                    , lens >=5.2.3 && <5.4
                    , list-shuffle >=1.0.0.1 && <1.1
                    , massiv >=1.0.4.1 && <1.1
                    , mtl >=2.2 && <2.4
                    , optparse-applicative >=0.17 && <0.19
                    , random >=1.2 && <1.4
                    , scheduler >=2.0.0.1 && <3
                    , split >=0.2.5 && <0.3
                    , srtree >= 2.0.1.5
                    , statistics >=0.16.2.1 && <0.17
                    , transformers >=0.6.1.0 && <0.7
                    , unliftio >=0.2.10 && <1
                    , unliftio-core >=0.2.1 && <1
                    , unordered-containers ==0.2.*
                    , text  >= 2.0 && < 3
                    , vector >=0.12 && <0.14
                    , zlib >=0.6.3 && <0.8
                    , directory
                    , time
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite symbolic-regression-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >= 4 && <5,
        symbolic-regression
