cabal-version:      3.0
name:               symbolic-regression
version:            0.2.0.1
synopsis:           Symbolic Regression in Haskell
description:        Automatically discover mathematical expressions that best fit your data using genetic programming with e-graph optimization.
license:            MIT
license-file:       LICENSE
author:             DataHaskell
maintainer:         mschavinda@gmail.com
category:           Data
build-type:         Simple
homepage:           https://github.com/DataHaskell/symbolic-regression
bug-reports:        https://github.com/DataHaskell/symbolic-regression/issues
extra-doc-files:    CHANGELOG.md README.md
extra-source-files: cabal.project

common warnings
    ghc-options: -Wall -O2

library
    import:           warnings
    exposed-modules:  Symbolic.Regression
                    , Symbolic.Regression.Expr
                    , Symbolic.Regression.Expr.Utils
                    , Symbolic.Regression.Expr.Eval
                    , Symbolic.Regression.Expr.Opt
                    , Symbolic.Regression.Expr.Print
                    , Symbolic.Regression.Language
                    , Symbolic.Regression.Rewrites
                    , Symbolic.Regression.EGraph
                    , Symbolic.Regression.GP
                    , Symbolic.Regression.Fitness
    build-depends:    base >= 4 && <5
                    , hegg >= 0.6
                    , dataframe >= 1.0.0.1 && < 2
                    , containers >=0.6.7 && <0.8
                    , mtl >=2.2 && <2.4
                    , random >=1.2 && <1.4
                    , split >=0.2.5 && <0.3
                    , transformers >=0.6.1.0 && <0.7
                    , text  >= 2.0 && < 3
                    , vector >=0.12 && <0.14
                    , time >= 1.12 && < 2
    hs-source-dirs:   src
    default-language: Haskell2010

executable sr-bench
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   bench
    main-is:          Bench.hs
    ghc-options:      -O2
    build-depends:
        base        >= 4 && <5,
        symbolic-regression,
        dataframe   >= 1.0.0.1 && < 2,
        random      >= 1.2 && < 1.4,
        time        >= 1.12 && < 2

executable feynman-bench
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   bench
    main-is:          Feynman.hs
    ghc-options:      -O2
    build-depends:
        base        >= 4 && <5,
        symbolic-regression,
        dataframe   >= 1.0.0.1 && < 2,
        random      >= 1.2 && < 1.4,
        time        >= 1.12 && < 2,
        directory   >= 1.3 && < 2,
        process     >= 1.6 && < 2

test-suite symbolic-regression-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base        >= 4 && <5,
        symbolic-regression,
        dataframe   >= 1.0.0.1 && < 2,
        random      >= 1.2 && < 1.4

executable sr-profile
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   bench
    main-is:          Profile.hs
    ghc-options:      -O2 -rtsopts
    build-depends:
        base        >= 4 && <5,
        symbolic-regression,
        dataframe   >= 1.0.0.1 && < 2,
        random      >= 1.2 && < 1.4,
        process     >= 1.6 && < 2
