cabal-version:      3.0
name:               symbolic-regression
version:            0.2.0.1
synopsis:           Symbolic Regression in Haskell
description:        Automatically discover mathematical expressions that best fit your data using genetic programming with e-graph optimization.
license:            MIT
license-file:       LICENSE
author:             DataHaskell
maintainer:         mschavinda@gmail.com
category:           Data
build-type:         Simple
homepage:           https://github.com/DataHaskell/symbolic-regression
bug-reports:        https://github.com/DataHaskell/symbolic-regression/issues
extra-doc-files:    CHANGELOG.md README.md
extra-source-files: cabal.project

common warnings
    ghc-options: -Wall -O2

library
    import:           warnings
    exposed-modules:  Symbolic.Regression
                    , Symbolic.Regression.Poly
                    , Symbolic.Regression.Expr
                    , Symbolic.Regression.Expr.Utils
                    , Symbolic.Regression.Expr.Eval
                    , Symbolic.Regression.Expr.Opt
                    , Symbolic.Regression.Expr.NLOPT
                    , Symbolic.Regression.Expr.Print
                    , Symbolic.Regression.Language
                    , Symbolic.Regression.Rewrites
                    , Symbolic.Regression.EGraph
                    , Symbolic.Regression.GP
                    , Symbolic.Regression.Fitness
                    , Numeric.Optimization.NLOPT.Bindings
    extra-libraries:  nlopt
    include-dirs:     /opt/homebrew/opt/nlopt/include
    extra-lib-dirs:   /opt/homebrew/opt/nlopt/lib
    build-depends:    base >= 4 && <5
                    , hegg >= 0.6
                    , dataframe >= 1.0.0.1 && < 2
                    , containers >=0.6.7 && <0.8
                    , mtl >=2.2 && <2.4
                    , random >=1.2 && <1.4
                    , split >=0.2.5 && <0.3
                    , transformers >=0.6.1.0 && <0.7
                    , text  >= 2.0 && < 3
                    , vector >=0.12 && <0.14
                    , time >= 1.12 && < 2
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite symbolic-regression-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base        >= 4 && <5,
        symbolic-regression,
        random      >= 1.2 && < 1.4,
        vector      >= 0.12 && < 0.14
